# tiny_config

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  tiny_config.opam  tiny_config_dev.opam  tiny_config_test.opam  tiny_toml.opam  tiny_yaml.opam
.github/workflows/: build_and_test.yml
tiny_config/: accessor.ml  accessor_intf.ml  converter.ml  converter_intf.ml  dune  parser.ml  parser_intf.ml  term.ml  term_intf.ml  tiny_config.ml  tiny_config.mli  value.ml  value_intf.ml
tiny_config_dev/examples/00_quick_start/: README.md  bad_config.toml  dune  good_config.toml  quick_start.ml
tiny_config_dev/examples/00_quick_start/test/: dune  run.t
tiny_config_dev/examples/01_basic_usage/: README.md
tiny_config_dev/examples/01_basic_usage/test/: config.toml  config.yaml  dune  run.t
tiny_config_dev/test/: dune  test_tiny_yaml.ml
tiny_config_test/: dune  test_tiny_toml.ml  test_tiny_yaml.ml
tiny_toml/: dune  tiny_toml.ml  tiny_toml.mli
tiny_yaml/: dune  tiny_yaml.ml  tiny_yaml.mli
